name:                kitty-cat-map
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kitty-cat-map/kitty-cat-map-backend
license:             BSD3
license-file:        LICENSE
author:              Dennis Gosnell
maintainer:          cdep.illabout@gmail.com
copyright:           2017 Dennis Gosnell
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Kitty.Api
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-api-data
                     , natural-transformation
                     , servant
                     , servant-checked-exceptions
                     , servant-server
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists

executable kitty-cat-map-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  build-depends:       base
                     , kitty-cat-map
  default-language:    Haskell2010

test-suite kitty-cat-map-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kitty-cat-map
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kitty-cat-map/kitty-cat-map-backend
