name:                kitty-cat-map-db
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kitty-cat-map/kitty-cat-map-backend
license:             BSD3
license-file:        LICENSE
author:              Dennis Gosnell
maintainer:          cdep.illabout@gmail.com
copyright:           2017 Dennis Gosnell
category:            Web
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Kitty.Db
                     , Kitty.Db.Conf
                     , Kitty.Db.Geom
                     , Kitty.Db.Model
                     , Kitty.Db.Query
  build-depends:       base-noprelude >= 4.9 && < 5
                     , binary
                     , haskell-postgis
                     , kitty-cat-map-base
                     , lens
                     , postgresql-simple
                     , resource-pool
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  default-extensions:  DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , EmptyDataDecls
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , MultiParamTypeClasses
                     , NoMonomorphismRestriction
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , ViewPatterns
  other-extensions:    QuasiQuotes
                     , TemplateHaskell

source-repository head
  type:     git
  location: https://github.com/kitty-cat-map/kitty-cat-map-backend
