name:                kitty-cat-map-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kitty-cat-map/kitty-cat-map-backend
license:             BSD3
license-file:        LICENSE
author:              Dennis Gosnell
maintainer:          cdep.illabout@gmail.com
copyright:           2017 Dennis Gosnell
category:            Web
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Kitty.Server
                     , Kitty.Server.Api
                     , Kitty.Server.Image
                     , Kitty.Server.Conf
  build-depends:       base-noprelude >= 4.9 && < 5
                     , aeson
                     , http-api-data
                     , kitty-cat-map-base
                     , kitty-cat-map-db
                     , lens
                     , natural-transformation
                     , read-env-var
                     , servant
                     , servant-checked-exceptions
                     , servant-multipart
                     , servant-server
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  default-extensions:  DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , EmptyDataDecls
                     , FlexibleContexts
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , NoMonomorphismRestriction
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , TypeSynonymInstances
                     , ViewPatterns
  other-extensions:    QuasiQuotes
                     , TemplateHaskell

source-repository head
  type:     git
  location: https://github.com/kitty-cat-map/kitty-cat-map-backend
